--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "crypto-js": "^4.2.0",
+    "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -34,6 +35,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
+    "@types/qrcode": "^1.5.5",
     "glob": "^11.0.1",
     "inflight": "^1.0.6",
     "jasmine-core": "~5.6.0",
