--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "angularx-qrcode": "^19.0.0",
     "crypto-js": "^4.2.0",
     "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
