alterando endereço backend

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -6,7 +6,7 @@
         "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
         "X-Frame-Options": "DENY",
         "X-Content-Type-Options": "nosniff",
-        "Content-Security-Policy": "default-src 'self'; script-src 'self' *.6.azurestaticapps.net; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data:;"
+        "Content-Security-Policy": "default-src 'self'; connect-src 'self' https://nadatemaqui.dyndns-remote.com:1443; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:;"
       }
     }
   ]
